Corrected overflow on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -620,6 +620,7 @@ nav {
 .feature-section {
   margin: 50px auto 0;
   height: 2900px;
+  overflow-x: hidden;
 }
 
 .feature-title {
